src/test/deca/syntax/valid/declClass-simpleExample.deca
class A {}

class B extends A {}

class C extends A {}

class E extends Object {}