src/test/deca/syntax/invalid/declMethod-redefinitionNull.deca
class A {
    A coco() {
    }
}

class B extends A {
    null coco() {
    }
}